Fix artists list for overflow.

--- a/src/fragments/Artists/Artists.css
+++ b/src/fragments/Artists/Artists.css
@@ -1,5 +1,6 @@
 .Artists {
   display: flex;
+  flex-flow: row wrap;
 }
 
 .Artists .artist:not(:first-child):before {
